welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:1: error: ':' expected but ';' found.
def flower(c;Color){
            ^FlowerPot:1: error: ';' expected but ')' found.
def flower(c;Color){
                  ^